adding some new feature

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./img/websitelogo.png" alt="websitelogo png">
 </head>
 <body>
     
@@ -12,7 +13,21 @@
   <h1 id="Fheader">
     Welcome to pannkaka website
   </h1>
+  <p id="date"></p>
+    <nav class="nav_items">
+      <a href="#">
+        Om
+      </a>
+      <a href="#">
+        Form
+      </a>
+      <a href="#">
+        About
+      </a>
+    </nav>
   </header>
+
+ 
 
     <main class="container">
       <h1 id="header">Enkelt recept på pannkakor</h1>
@@ -74,16 +89,17 @@
       </div>
       <div class="rightFooter"> 
         <a href="https://facebook.com" target="_blank">
-          <img src="./img/socialmedia/vecteezy_icons-business-card-contact-information-symbols-isolated_32426141.png" alt="Someid" class="icon">
+          <img src="./img/socialmedia/vecteezy_social-media-icon_25685169.png" alt="Someid" class="icon">
         </a>
-        <a href="Instagram.com" target="blank">
+        <a href="instagram.com" target="blank">
           <img src="./img/socialmedia/vecteezy_social-media-icon_25685166.png" alt="Socialmedia" class="icon">
         </a>
         <a>
-          <img src="./img/socialmedia/vecteezy_social-media-icon_25685169.png" alt="Phonenumber" class="icon">
+          <img src="/public/img/socialmedia/vecteezy_icons-business-card-contact-information-symbols-isolated_32426141.png" alt="Phonenumber" class="icon">
         </a>
       </div>
   </footer>
+  <script src="script.js"></script>
 
   </body>
 </html>
