added a form for fun

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Mywebsite</title>
+  <link rel="stylesheet" href="./style/style.css">
   <link rel="icon" href="./img/websitelogo.png" alt="websitelogo png">
 </head>
 <body>
@@ -18,11 +18,14 @@
       <a href="#">
         Om
       </a>
-      <a href="#">
+      <a href="/public/form.html">
         Form
       </a>
       <a href="#">
         About
+      </a>
+      <a href="/public/index.html">
+        Main
       </a>
     </nav>
   </header>
@@ -94,7 +97,7 @@
         <a href="instagram.com" target="blank">
           <img src="./img/socialmedia/vecteezy_social-media-icon_25685166.png" alt="Socialmedia" class="icon">
         </a>
-        <a>
+        <a href="tel:+46735784775" target="_self">
           <img src="/public/img/socialmedia/vecteezy_icons-business-card-contact-information-symbols-isolated_32426141.png" alt="Phonenumber" class="icon">
         </a>
       </div>
